// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Турбо-оверлей Воссоздает оверлеи по событию в истории 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner turbo-overlay__spinner_visible"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://overlay.some"
          />
        </div>
      </div>
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Воссоздает оверлеи по событию в истории 2`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner turbo-overlay__spinner_visible"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=https://overlay.some-other"
          />
        </div>
      </div>
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Воссоздает оверлеи по событию в истории: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      />
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Не вызывает сообщения, если ориджин некорректный: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner turbo-overlay__spinner_visible"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=test_news&some-more-data&new_overlay=1"
          />
        </div>
      </div>
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Открывает страницу с переданным index в режиме мультислайдера 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_multipage turbo-overlay_with-title turbo-overlay_with-titles turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button turbo-overlay__back-button_hidden"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          >
            <div
              class="turbo-overlay__title-host"
              style="margin-left: 0px;"
            >
              original-host1.ru
            </div>
            <div
              class="turbo-overlay__title-host turbo-overlay__title-host_active"
            >
              original-host2.ru
            </div>
          </div>
          <ul
            class="turbo-overlay__dots turbo-overlay__dots_visible"
          >
            <li
              class="turbo-overlay__dot"
            />
            <li
              class="turbo-overlay__dot turbo-overlay__dot_active"
            />
          </ul>
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button turbo-overlay__close-button_visible"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner turbo-overlay__spinner_visible"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
          style="left: 100%;"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=test_news&some-more-data2&new_overlay=1&check_swipe=1&itd=1"
          />
        </div>
      </div>
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Открывается в режиме мультислайдера 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_multipage turbo-overlay_with-title turbo-overlay_with-titles turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button turbo-overlay__back-button_hidden"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          >
            <div
              class="turbo-overlay__title-host turbo-overlay__title-host_active"
              style="margin-left: 0px;"
            >
              original-host1.ru
            </div>
            <div
              class="turbo-overlay__title-host"
            >
              original-host2.ru
            </div>
          </div>
          <ul
            class="turbo-overlay__dots turbo-overlay__dots_visible"
          >
            <li
              class="turbo-overlay__dot turbo-overlay__dot_active"
            />
            <li
              class="turbo-overlay__dot"
            />
          </ul>
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button turbo-overlay__close-button_visible"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner turbo-overlay__spinner_visible"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
          style="left: 0%;"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=test_news&some-more-data&new_overlay=1&check_swipe=1&itd=1"
          />
        </div>
      </div>
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Открывается с записью в историю 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner turbo-overlay__spinner_visible"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=test_news&some-more-data&new_overlay=1"
          />
        </div>
      </div>
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Показывает и прячет кнопку закрытия 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      />
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Показывает и прячет кнопку закрытия 2`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button turbo-overlay__close-button_visible"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      />
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Показывает и прячет кнопку закрытия 3`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      />
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Показывает и скрывает крестик по событиям в истории 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner turbo-overlay__spinner_visible"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo&new_overlay=1"
          />
        </div>
      </div>
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Показывает и скрывает крестик по событиям в истории 2`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button turbo-overlay__close-button_visible"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo&new_overlay=1"
          />
        </div>
      </div>
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Показывает и скрывает крестик по событиям в истории 3`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo&new_overlay=1"
          />
        </div>
      </div>
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Показывается без записи в историю при открытии с флагом 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner turbo-overlay__spinner_visible"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=test_news&some-more-data&new_overlay=1"
          />
        </div>
      </div>
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Реагирует на события истории на закрытие и открытие оверлея: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      />
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Реагирует на события истории на закрытие и открытие оверлея: Состояние после открытия 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner turbo-overlay__spinner_visible"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=test_news&some-more-data&new_overlay=1"
          />
        </div>
      </div>
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Реагирует на события истории на закрытие и открытие оверлея: Состояние после открытия 2`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      />
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Режим Drawer-шторки (у тега script есть атрибут view-type="drawer") В разметке рендерятся два вида отображения 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay-drawer"
    >
      <div
        class="turbo-overlay-drawer__wrapper"
      >
        <div
          class="turbo-overlay-drawer__paranja"
        />
        <div
          class="turbo-overlay-drawer__curtain"
        >
          <div
            class="turbo-overlay-drawer__curtain-handler turbo-overlay-drawer__curtain-handler-top"
          />
          <div
            class="turbo-overlay-drawer__curtain-content"
          >
            <div
              class="turbo-overlay-drawer__frames-container"
            />
            <div
              class="turbo-overlay-drawer__spinner"
            />
          </div>
          <div
            class="turbo-overlay-drawer__curtain-handler turbo-overlay-drawer__curtain-handler-bottom"
          />
        </div>
      </div>
    </div>
    <div
      class="turbo-overlay"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      />
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Скрывает и показывает шапку: Изначальное состояние 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner turbo-overlay__spinner_visible"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=test_news&some-more-data&new_overlay=1"
          />
        </div>
      </div>
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Скрывает и показывает шапку: Шапка показана 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner turbo-overlay__spinner_visible"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=test_news&some-more-data&new_overlay=1"
          />
        </div>
      </div>
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Скрывает и показывает шапку: Шапка спрятана 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_visible turbo-overlay_header-hidden"
    >
      <div
        class="turbo-overlay__head"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner turbo-overlay__spinner_visible"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=test_news&some-more-data&new_overlay=1"
          />
        </div>
      </div>
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Создается без ошибок 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          />
          <ul
            class="turbo-overlay__dots"
          />
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner"
      />
      <div
        class="turbo-overlay__frames-container"
      />
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;

exports[`Турбо-оверлей Устанавливает переданный title на место хоста в режиме мультислайдера 1`] = `
<html>
  <head>
    <title>
      Яндекс
    </title>
  </head>
  <body>
    <div
      class="turbo-overlay turbo-overlay_multipage turbo-overlay_with-title turbo-overlay_visible"
    >
      <div
        class="turbo-overlay__head turbo-overlay__head_visible"
      >
        <button
          class="turbo-overlay__back-button turbo-overlay__button turbo-overlay__back-button_hidden"
        >
          <div
            class="turbo-overlay__back-icon"
          >
            backIcon.svg
          </div>
          <div
            class="turbo-overlay__back-label"
          >
            Назад
          </div>
        </button>
        <div
          class="turbo-overlay__head-central-container"
        >
          <div
            class="turbo-overlay__title"
          >
            Заголовок
          </div>
          <ul
            class="turbo-overlay__dots turbo-overlay__dots_visible"
          >
            <li
              class="turbo-overlay__dot turbo-overlay__dot_active"
            />
            <li
              class="turbo-overlay__dot"
            />
          </ul>
        </div>
        <button
          class="turbo-overlay__close-button turbo-overlay__button turbo-overlay__close-button_visible"
        >
          <div
            class="turbo-overlay__close-icon"
          >
            closeIcon.svg
          </div>
        </button>
      </div>
      <div
        class="turbo-overlay__spinner turbo-overlay__spinner_visible"
      />
      <div
        class="turbo-overlay__frames-container"
      >
        <div
          class="turbo-overlay__body turbo-overlay__body_visible"
          style="left: 0%;"
        >
          <iframe
            class="turbo-overlay__iframe"
            src="https://yandex.ru/turbo?text=test_news&some-more-data&new_overlay=1&check_swipe=1&itd=1"
          />
        </div>
      </div>
    </div>
    <style
      type="text/css"
    >
      
            :root {
                --turbo-overlay-safe-area-inset-top: env(safe-area-inset-top);
                --turbo-overlay-safe-area-inset-right: env(safe-area-inset-right);
                --turbo-overlay-safe-area-inset-bottom: env(safe-area-inset-bottom);
                --turbo-overlay-safe-area-inset-left: env(safe-area-inset-left);
            }
        
    </style>
  </body>
</html>
`;
